fix(heatmap): coloring and spacing
now the heatmap looks good even for only 1 experiment/protein

--- a/frontend/css/bulkSearch.css
+++ b/frontend/css/bulkSearch.css
@@ -4,6 +4,7 @@
 
 .textarea {
     height: 6em;
+    border-radius: 3px;
 }
 
 .prompt.inline {
